rendered/envs/friclu/immich/service-immich-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: valkey
    app.kubernetes.io/service: immich-valkey
    app.kubernetes.io/version: v2.0.0
    helm.sh/chart: immich-0.10.0
  name: immich-valkey
  namespace: immich
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: valkey
  type: ClusterIP
