rendered/envs/friclu/immich/ingress-immich-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: v2.0.0
    helm.sh/chart: immich-0.10.0
  name: immich-server
  namespace: immich
spec:
  rules:
    - host: immich.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 2283
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - immich.duchardt.net
      secretName: immich-certificate
